Correction Ratio contraste bouton & footer

--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ h4 {
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #C27956!important;
     color: #FFFFFF!important;
 }
 
